--- a/test/unit/.eslintrc
+++ b/test/unit/.eslintrc
@@ -1,9 +1,13 @@
 {
   "env": {
-    "mocha": true
+    "mocha": true,
+    "browser": true
   },
   "globals": {
     "expect": true,
     "sinon": true
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
 }
