--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "vue": "^2.1.0",
+    "vue-material": "^0.3.3",
+    "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
   },
   "devDependencies": {
