--- a/test/unit/.eslintrc
+++ b/test/unit/.eslintrc
@@ -8,6 +8,7 @@
     "sinon": true
   },
   "rules": {
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "padded-blocks": "off"
   }
 }
