--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "materialize-css": "^0.97.8",
     "vue": "^2.1.0",
-    "vue-material": "^0.3.3",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
   },
@@ -55,11 +55,15 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
