--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-html": "^1.3.0",
     "eslint-plugin-import": "^1.16.0",
     "eventsource-polyfill": "^0.9.6",
+    "expose-loader": "^0.7.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
