--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "client-oauth2": "^3.2.0",
     "lodash.uniqueid": "^4.0.1",
     "sortablejs": "^1.5.0-rc1",
     "vue": "^2.1.0",
