--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "client-oauth2": "^3.2.0",
     "lodash.uniqueid": "^4.0.1",
+    "query-string": "^4.2.3",
     "sortablejs": "^1.5.0-rc1",
     "vue": "^2.1.0",
     "vue-router": "^2.0.3",
