--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "Frontend for pomoapp",
   "author": "strothj <jason@jasons.io>",
-  "private": true,
+  "homepage": "https://pomoapp.site",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/strothj/pomoapp-frontend"
+  },
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
