--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "client-oauth2": "^3.2.0",
     "lodash.uniqueid": "^4.0.1",
     "sortablejs": "^1.5.0-rc1",
     "vue": "^2.1.0",
     "vue-material": "0.4.1",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
   },
