--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "progressbar.js": "^1.0.1",
     "sortablejs": "^1.5.0-rc1",
     "superagent": "^3.3.1",
     "vue": "^2.1.0",
-    "vue-material": "0.4.1",
+    "vue-material": "^0.5.2",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
   },
