--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "auth0-js": "^8.0.1",
     "progressbar.js": "^1.0.1",
     "sortablejs": "^1.5.0-rc1",
     "superagent": "^3.3.1",
