--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "auth0-js": "^8.0.2",
+    "axios": "^0.15.3",
     "progressbar.js": "^1.0.1",
     "sortablejs": "^1.5.0-rc1",
     "superagent": "^3.3.1",
