Added hiding appbar on landing page

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "auth0-js": "^8.0.2",
     "axios": "^0.15.3",
+    "headroom.js": "^0.9.3",
     "lodash.padstart": "^4.6.1",
     "progressbar.js": "^1.0.1",
     "vue": "^2.1.0",
+    "vue-focus": "^2.1.0",
     "vue-material": "^0.6.3",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
